--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textFragmentA">A</string>
+    <string name="textFragmentB">B</string>
+    <string name="textFragmentC">C</string>
 </resources>
